landing icons and feedback form impl.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
               <div class="row">
                   <div class="col-md-5 offset-md-1 my-5 p-4">
                     <h1 class="jumbotron-heading mb-3">Studuj práva efektivně!</h1>
-                    <p class="lead">Pusť se do studia práv se sadou stovek kartiček s otázkami a odpověďmi. Skvělá interaktivní příprava na zkoušky.</p>        
+                    <p class="lead">Pusť se do studia práv s více než dvěma tisíci kartiček s otázkami a odpověďmi. Skvělá interaktivní příprava na zkoušky.</p>        
                     <div class="mt-5">
                         <% if(!currentUser){ %> 
                             <a href="/auth/user/new" class="btn btn-lg btn-danger">Studuj zdarma</a>
@@ -53,7 +53,7 @@
                             <i class="fas fa-scroll fa-3x text-muted"></i>
                         </div>
                         <div>
-                            <p class="info-main">1 235 opakovacích kartiček</p>
+                            <p class="info-main">1 500+ opakovacích kartiček</p>
                             <p class="info-secondary text-muted">a přibývají</p>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                                     <i class="fas fa-scroll fa-3x text-muted"></i>
                                 </div>
                                 <div class="col-9">
-                                    <p class="info-main">1 235 opakovacích kartiček</p>
+                                    <p class="info-main">1 500+ opakovacích kartiček</p>
                                     <p class="info-secondary text-muted">a přibývají</p>
                                 </div>
                             </div>
@@ -121,7 +121,9 @@
                     <a href="/category/trestnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/landing_trest.jpeg" class="rounded-circle landing-img m-3" alt="">
+                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                    <img src="/img/icon_tresthmota.png" class="img-fit" alt="" />
+                                </div>
                             </div>
                             <div class="card-body cat-text">
                                 <h5 class="card-title">Trestní právo <br> hmotné</h5>
@@ -135,7 +137,9 @@
                     <a href="/category/trestniproces" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/landing_trestniproces.jpeg" class="rounded-circle landing-img m-3" alt="">
+                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                    <img src="/img/icon_trestproces.png" class="img-fit" alt="" />
+                                </div>
                             </div>
                             <div class="card-body cat-text">
                                 <h5 class="card-title">Trestní právo <br> procesní</h5>
@@ -149,7 +153,9 @@
                     <a href="/category/obcanskepravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/landing_obcan.jpeg" class="rounded-circle landing-img m-3" alt="">
+                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                    <img src="/img/icon_civilhmota.png" class="img-fit" alt="" />
+                                </div>
                             </div>
                             <div class="card-body cat-text">
                                 <h5 class="card-title">Občanské právo <br> hmotné</h5>
@@ -163,7 +169,9 @@
                     <a href="/category/civilniproces" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/landing_civilniproces.jpeg" class="rounded-circle landing-img m-3" alt="">
+                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                    <img src="/img/icon_civilproces.png" class="img-fit" alt="" />
+                                </div>
                             </div>
                             <div class="card-body cat-text">
                                 <h5 class="card-title">Občanské právo <br> procesní</h5>
@@ -180,7 +188,9 @@
                     <a href="/category/spravnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/landing_sprava.jpeg" class="rounded-circle landing-img m-3" alt="">
+                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                    <img src="/img/icon_sprava.png" class="img-fit" alt="" />
+                                </div>
                             </div>
                             <div class="card-body cat-text">
                                 <h5 class="card-title">Správní právo</h5>
@@ -194,7 +204,9 @@
                     <a href="/category/ustavnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/landing_ustavko.jpeg" class="rounded-circle landing-img m-3" alt="">
+                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                    <img src="/img/icon_ustavko.png" class="img-fit" alt="" />
+                                </div>
                             </div>
                             <div class="card-body cat-text">
                                 <h5 class="card-title">Ústavní právo</h5>
@@ -208,7 +220,9 @@
                     <a href="/category/obchodnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/landing_obchod.jpeg" class="rounded-circle landing-img m-3" alt="">
+                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                    <img src="/img/icon_obchod.png" class="img-fit" alt="" />
+                                </div>
                             </div>
                             <div class="card-body cat-text">
                                 <h5 class="card-title">Obchodní právo</h5>
@@ -222,7 +236,9 @@
                     <a href="/category/mezinarodnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/landing_mezinarodko.jpeg" class="rounded-circle landing-img m-3" alt="">
+                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                    <img src="/img/icon_mezinarodko.png" class="img-fit" alt="" />
+                                </div>
                             </div>
                             <div class="card-body cat-text">
                                 <h5 class="card-title">Mezinárodní právo</h5>
@@ -242,7 +258,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center my-5">
                     <h1 class="mb-4">Naše vize</h1>
-                    <p class="fs-5">Mladí právníci neustále skládají zkoušky. Ať už na právnické fakultě nebo po jejím dokončení v rámci dalšího profesního vzdělávání. Sami jsme touto cestou prošli. Rádi bychom jim nabídli nástroj, který jim na této náročné cestě usnadní život a přípravu na tyto zkoušky zefektivní. Proto jsme vytvořili <strong style="color:#E80F88">InLege</strong>, aplikaci pro studium práva.</p>
+                    <p class="fs-5">Mladí právníci neustále skládají zkoušky. Ať už na právnické fakultě nebo po jejím dokončení v rámci dalšího profesního vzdělávání. Sami jsme touto cestou prošli. Rádi bychom jim nabídli nástroj, který jim na této náročné cestě usnadní život a přípravu na tyto zkoušky zefektivní. Proto jsme vytvořili <strong style="color:#E80F88">InLege</strong>, aplikaci pro studium práv.</p>
                 </div>
             </div>
         </div>
