--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7,6 +7,10 @@
     color: #E80F88;
 }
 
+.text-package-title {
+    font-size: 0.9rem;
+}
+
 .text-small {
     font-size: 0.8rem;
 }
@@ -33,7 +37,12 @@
 }
 
 .category-box p {
-    font-size: 2rem;
+    font-size: 1.5rem;
+}
+
+.img-fit {
+    max-width:60%;
+    max-height:60%;
 }
 
 .category-headline {
