--- a/views/category.ejs
+++ b/views/category.ejs
@@ -29,16 +29,15 @@
         <div class="card shadow">
             <div class="card-body category-box d-flex flex-column align-items-center justify-content-center">
                 <div class="rounded-circle icon-background d-flex justify-content-center align-items-center">
-                    <% if(category.name === "demo"){ %> <i class="fas fa-gavel"></i> <% } %>
-                    <% if(category.name === "trestnipravo"){ %> <i class="fas fa-book-dead"></i> <% } %>
-                    <% if(category.name === "obcanskepravo"){ %> <i class="fas fa-book"></i> <% } %>
-                    <% if(category.name === "spravnipravo"){ %> <i class="fas fa-journal-whills"></i> <% } %>
-                    <% if(category.name === "ustavnipravo"){ %> <i class="fas fa-university"></i> <% } %>
-                    <% if(category.name === "obchodnipravo"){ %> <i class="far fa-handshake"></i> <% } %>
-                    <% if(category.name === "mezinarodnipravo"){ %> <i class="fas fa-globe-europe"></i> <% } %>
-                    <% if(category.name === "trestniproces"){ %> <i class="fas fa-gavel"></i> <% } %>
-                    <% if(category.name === "civilniproces"){ %> <i class="fas fa-balance-scale-right"></i> <% } %>
-                    
+                    <% if(category.name === "demo"){ %> <img src="/img/icon_tresthmota.png" class="img-fit" alt="" /> <% } %>
+                    <% if(category.name === "trestnipravo"){ %> <img src="/img/icon_tresthmota.png" class="img-fit" alt="" /> <% } %>
+                    <% if(category.name === "obcanskepravo"){ %> <img src="/img/icon_civilhmota.png" class="img-fit" alt="" /> <% } %>
+                    <% if(category.name === "spravnipravo"){ %> <img src="/img/icon_sprava.png" class="img-fit" alt="" /> <% } %>
+                    <% if(category.name === "ustavnipravo"){ %> <img src="/img/icon_ustavko.png" class="img-fit" alt="" /> <% } %>
+                    <% if(category.name === "obchodnipravo"){ %> <img src="/img/icon_obchod.png" class="img-fit" alt="" /> <% } %>
+                    <% if(category.name === "mezinarodnipravo"){ %> <img src="/img/icon_mezinarodko.png" class="img-fit" alt="" /> <% } %>
+                    <% if(category.name === "trestniproces"){ %> <img src="/img/icon_trestproces.png" class="img-fit" alt="" /> <% } %>
+                    <% if(category.name === "civilniproces"){ %> <img src="/img/icon_civilproces.png" class="img-fit" alt="" /> <% } %>
                 </div>
                 <p class="mt-4 mb-2"><%= title %> </p>
             </div>
@@ -63,24 +62,24 @@
 
                     <!-- SEZNAM ZAKLADNICH BALICKU -->
                     <% if(section.isPublic){ %> 
-                    <div class="row py-2">
+                    <div class="row py-1">
                         <div class="col-7 d-flex align-items-center">                    
                                 <% if(currentUser && currentUser.sections.includes(section._id)) { %>
                                     <i class="fas fa-check-circle me-2" style="color:#AF0171"></i>
                                     <div>
-                                        <p class="m-0 text-muted"><%= section.name %></p>
+                                        <p class="m-0 text-muted text-package-title"><%= section.name %></p>
                                         <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                     </div>
                                 <% } else if (section.isPremium) { %>
                                     <i class="fas fa-star me-2"></i>
                                     <div>
-                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="m-0 text-package-title"><%= section.name %></p>
                                         <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                     </div>
                                 <% } else { %> 
                                     <i class="fas fa-layer-group me-2"></i>
                                     <div>
-                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="m-0 text-package-title"><%= section.name %></p>
                                         <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                     </div>
                                 <% } %>
@@ -141,24 +140,24 @@
 
                     <!-- ADMIN VIEW -->
                     <% if(!section.isPublic && currentUser && currentUser.admin){ %> 
-                        <div class="row py-2">
+                        <div class="row py-1">
                             <div class="col-5 d-flex align-items-center">                    
                                 <% if(currentUser && currentUser.sections.includes(section._id)) { %>
                                     <i class="fas fa-check-circle me-2" style="color:#AF0171"></i>
                                     <div>
-                                        <p class="m-0 text-muted"><%= section.name %></p>
+                                        <p class="m-0 text-muted text-package-title"><%= section.name %></p>
                                         <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                     </div>
                                 <% } else if (section.isPremium) { %>
                                     <i class="fas fa-star me-2"></i>
                                     <div>
-                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="m-0 text-package-title"><%= section.name %></p>
                                         <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                     </div>
                                 <% } else { %> 
                                     <i class="fas fa-layer-group me-2"></i>
                                     <div>
-                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="m-0 text-package-title"><%= section.name %></p>
                                         <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                     </div>
                                 <% } %>
@@ -237,19 +236,19 @@
                             <% if(currentUser && currentUser.sections.includes(section._id)) { %>
                                 <i class="fas fa-check-circle me-2" style="color:#AF0171"></i>
                                 <div>
-                                    <p class="m-0 text-muted"><%= section.name %></p>
+                                    <p class="m-0 text-muted text-package-title"><%= section.name %></p>
                                     <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                 </div>
                             <% } else if (section.isPremium) { %>
                                 <i class="fas fa-star me-2"></i>
                                 <div>
-                                    <p class="m-0"><%= section.name %></p>
+                                    <p class="m-0 text-package-title"><%= section.name %></p>
                                     <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                 </div>
                             <% } else { %> 
                                 <i class="fas fa-layer-group me-2"></i>
                                 <div>
-                                    <p class="m-0"><%= section.name %></p>
+                                    <p class="m-0 text-package-title"><%= section.name %></p>
                                     <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                 </div>
                             <% } %>
@@ -313,19 +312,19 @@
                                 <% if(currentUser && currentUser.sections.includes(section._id)) { %>
                                     <i class="fas fa-check-circle me-2" style="color:#AF0171"></i>
                                     <div>
-                                        <p class="m-0 text-muted"><%= section.name %></p>
+                                        <p class="m-0 text-muted text-package-title"><%= section.name %></p>
                                         <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                     </div>
                                 <% } else if (section.isPremium) { %>
                                     <i class="fas fa-star me-2"></i>
                                     <div>
-                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="m-0 text-package-title"><%= section.name %></p>
                                         <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                     </div>
                                 <% } else { %> 
                                     <i class="fas fa-layer-group me-2"></i>
                                     <div>
-                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="m-0 text-package-title"><%= section.name %></p>
                                         <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                     </div>
                                 <% } %>
