--- a/views/sections/finished.ejs
+++ b/views/sections/finished.ejs
@@ -17,8 +17,8 @@
                 <% } else { %> 
                     <hr>
                     <h4 class="mt-3">A co dál?</h4>
-                    <p class="m-3">Stejně jako cvičný balíček můžeš procházet stovky kartiček z různých právních oborů. Stačí se zdarma zaregistrovat.</p>
-                    <p class="m-3">A kdyby ti to nestačilo, další stovky kartiček jsou k dispozici za necelou stokorunu měsíčně s účtem Premium.</p>
+                    <p class="m-3">Stejně jako cvičný balíček můžeš <b>zdarma</b> procházet <b>více než 1 500 kartiček</b> z různých oborů práva. Stačí se zdarma zaregistrovat.</p>
+                    <p class="m-3">A kdyby ti to nestačilo, další stovky kartiček jsou k dispozici účtem Premium.</p>
                     <p>
                         <a href="/auth/user/new" class="btn btn-lg btn-danger mt-3">Zaregistrovat se zdarma</a>
                     </p>
