--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -167,3 +167,9 @@
         display:none;
     }
   }
+
+  @media only screen and (max-width: 992px) {
+    .nezobrazovat-na-mobilu-landing {
+      display: none;
+    }
+  }
