--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,15 +1,15 @@
 <footer class="footer bg-light py-3 mt-auto nezobrazovat-na-mobilu">
     <div class="container text-muted">
         <div class="d-flex flex-sm-row flex-column justify-content-between text-small">
-            <div class="mx-2">
+            <div class="mx-2 nezobrazovat-na-mobilu-landing">
                 <span>&copy; InLege 2023</span>
                 <a href="https://www.flaticon.com/" title="icons" class="footer-link">Icons created by Freepik - Flaticon</a>
             </div>
-            <div class="d-flex flex-sm-row flex-column justify-content-between">
+            <div class="d-flex flex-row justify-content-between">
                 <div class="mx-2"><a href="/legal/feedback" class="">Zaslat feedback</a></div>
                 <div class="mx-2"><a href="/legal/contact" class="footer-link">Kontakt</a></div>
                 <div class="mx-2"><a href="/legal/vop" class="footer-link">Obchodní podmínky</a></div>
-                <div class="mx-2"><a href="/legal/gdpr" class="footer-link">Ochrana osobních ůdajů</a></div>
+                <div class="mx-2"><a href="/legal/gdpr" class="footer-link">GDPR</a></div>
             </div>
         </div>
         
