save card logic, saved card page, delete own account logic

--- a/public/css/card.css
+++ b/public/css/card.css
@@ -74,6 +74,16 @@
     margin-bottom: 0.5rem;
 }
 
+.save-star {
+    color: #E80F88;
+    height: 20px;
+    width: 20px;
+}
+
+.spinner-border-small {
+    height: 20px;
+    width: 20px;
+ }
 /* Text gradient fade */
   .text-gradient {
     position: relative;
