--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,7 +121,7 @@
                     <a href="/category/trestnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_tresthmota.png" class="img-fit" alt="" />
                                 </div>
                             </div>
@@ -137,7 +137,7 @@
                     <a href="/category/trestniproces" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_trestproces.png" class="img-fit" alt="" />
                                 </div>
                             </div>
@@ -153,7 +153,7 @@
                     <a href="/category/obcanskepravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_civilhmota.png" class="img-fit" alt="" />
                                 </div>
                             </div>
@@ -169,7 +169,7 @@
                     <a href="/category/civilniproces" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_civilproces.png" class="img-fit" alt="" />
                                 </div>
                             </div>
@@ -188,7 +188,7 @@
                     <a href="/category/spravnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_sprava.png" class="img-fit" alt="" />
                                 </div>
                             </div>
@@ -204,7 +204,7 @@
                     <a href="/category/ustavnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_ustavko.png" class="img-fit" alt="" />
                                 </div>
                             </div>
@@ -220,7 +220,7 @@
                     <a href="/category/obchodnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_obchod.png" class="img-fit" alt="" />
                                 </div>
                             </div>
@@ -236,7 +236,7 @@
                     <a href="/category/mezinarodnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
-                                <div class="m-3 rounded-circle icon-background d-flex justify-content-center align-items-center">
+                                <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_mezinarodko.png" class="img-fit" alt="" />
                                 </div>
                             </div>
