--- a/views/legal/feedback.ejs
+++ b/views/legal/feedback.ejs
@@ -5,9 +5,9 @@
                 <div class="card p-3">
                     <div class="row p-3 pb-0">
                         <div class="col-12">
-                            <h3>Stojíme o vaši zpětnou vazbu</h3>
-                            <p class="my-4">InLege je projekt, na kterém stále pracujeme. Budeme rádi za vaše připomínky a nápady na
-                                zlepšení. Využijte prosím formulář níže nebo nám napiště na e-mail <a
+                            <h3>Stojíme o tvou zpětnou vazbu</h3>
+                            <p class="my-4">InLege je projekt, na kterém stále pracujeme. Budeme rádi za tvé připomínky a nápady na
+                                zlepšení. Využij prosím formulář níže nebo nám napiš na e-mail <a
                                     href="mailto: info@inlege.cz">info@inlege.cz</a>.</p>
                         </div>
                     </div>
@@ -21,7 +21,7 @@
                                     <input type="email" class="form-control mt-2" id="email" name="email" value="<%= user.email %>" required>
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control mt-2" id="text" name="text" rows="10" placeholder="Vaše nápady a připomínky..." required></textarea>
+                                    <textarea class="form-control mt-2" id="text" name="text" rows="10" placeholder="Tvé nápady a připomínky..." required></textarea>
                                 </div>
                                 <button type="submit" class="btn btn-danger mt-3">Odeslat feedback</button>
                             </form>
