--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -36,6 +36,9 @@
                   <% } %>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="/cards/saved/">Uložené kartičky</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="/auth/user/profile">Můj účet (<%= currentUser.firstname %>)</a>
                 </li>
                 <li class="nav-item">
