--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -1,121 +1,169 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InLege</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap_customised.css">
-    <link rel="stylesheet" href="/css/custom.css">
-    <link rel="stylesheet" href="/css/card.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>InLege</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/bootstrap_customised.css">
+  <link rel="stylesheet" href="/css/custom.css">
+  <link rel="stylesheet" href="/css/card.css">
 </head>
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
 
-    gtag('config', 'G-NNQ2L4K9C9');
-  </script>
+  gtag('config', 'G-NNQ2L4K9C9');
+</script>
 
 <body class="d-flex flex-column vh-100 bg-light">
-    <%- include('../partials/navbar') %> 
+  <%- include('../partials/navbar') %>
     <nav class="navbar bg-white shadow">
       <div class="container">
-          <ul class="navbar-nav">
-              <li><a href="/category/<%= card.category %>" class="back-link"><i class="fas fa-chevron-left me-2 mb-2"></i>Zpět na kategorii</a></li>
-              <li><p class="m-0"><small><%= sectionName %></p></small></li>
-          </ul>
+        <ul class="navbar-nav">
+          <li><a href="/category/<%= card.category %>" class="back-link"><i
+                class="fas fa-chevron-left me-2 mb-2"></i>Zpět na kategorii</a></li>
+          <li>
+            <p class="m-0"><small>
+                <%= sectionName %>
+            </p></small>
+          </li>
+        </ul>
       </div>
     </nav>
     <main class="container mt-md-5 p-4">
-        <div class="row">
-          <div class="col-lg-2 mb-3 zobrazovat-jen-na-mobilu">
-            <div class="card shadow">
-              <div class="card-body text-center">
-                <p class="text-muted text-smaller mb-1">Karta <%= nextNum - 1 %> z <%= sectionLength %></p>
-                <div class="progress">
-                  <% if(progressStatus && progressStatus === 0){ %> 
-                    <div class="progress-bar bg-danger" role="progressbar"></div>
-                  <% } else { %> 
-                    <div class="progress-bar bg-danger" role="progressbar" style="width:<%= progressStatus %>%" ><%= progressStatus %>%</div>
-                  <% } %> 
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-5 offset-lg-2 mb-3">
-            <div class="">
-              <div id="card" class="flashcard text-smaller"> 
-                <div class="card front text-center shadow">  
-                  <div class="card-body d-block">
-                    <div class="d-flex justify-content-center align-items-center min-height-300px">
-                      <div class="card-text pageA m-4" id="pageA"><b><%- card.pageA %></b></div>
+      <div class="row">
+        <div class="col-lg-2 mb-3 zobrazovat-jen-na-mobilu">
+          <div class="card shadow">
+            <div class="card-body text-center">
+              <p class="text-muted text-smaller mb-1">Karta <%= nextNum - 1 %> z <%= sectionLength %>
+              </p>
+              <div class="progress">
+                <% if(progressStatus && progressStatus===0){ %>
+                  <div class="progress-bar bg-danger" role="progressbar"></div>
+                  <% } else { %>
+                    <div class="progress-bar bg-danger" role="progressbar" style="width:<%= progressStatus %>%">
+                      <%= progressStatus %>%
                     </div>
-                  </div>
-                  <div class="card-footer d-flex justify-content-center">
-                    <a href="#" class="btn btn-outline-danger" id='btn-flip-front'>Otočit</a>
-                  </div>
-                </div> 
-                <div class="card back shadow invisible" id="back">
-                  <div class="card-body">
-                    <div class="d-flex align-items-center justify-content-center min-height-300px loader-push-class">
-                      <div id="loader"></div>
-                      <div class="card-text m-4 mb-0 max-height-280px text-gradient" id="pageB">
-                        <div class="inner-card-div">
-                          <%- card.pageB %> 
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card-footer d-flex justify-content-between align-items-center">
-                        <a href="#" id="rotate-back"><i class="fas fa-sync-alt"></i></a>
-                        <a href="/category/<%=card.category%>/section/<%=card.section%>/<%= nextNum %>" class="btn btn-danger easy-btn" id="next-btn" >Další</a>
-                        <div style="width:14px"></div>
-                  </div>
-                </div> 
-              </div>
-              <div class="text-center mt-4 servis-btns d-flex justify-content-center align-items-center">
-                <% if (currentUser && currentUser.admin) { %>
-                  <a href="/cards/edit/<%= card._id%>" class="text-muted">Upravit kartu</a>
-                  <a href="/cards/remove/<%= card._id%>" class="text-muted mx-3">Odstranit kartu</a>
-                <% } %>
-                  <a href="/cards/report/<%= card._id%>" target="_blank" class="text-muted">Nahlásit chybu</a>
-                  <p class="text-muted mb-0 px-3 nezobrazovat-na-mobilu">Otáčej [mezerníkem]</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-2 mb-3 mt-5 mt-lg-0 nezobrazovat-na-mobilu">
-            <div class="card shadow">
-              <div class="card-body text-center mt-3">
-                <h6><%= sectionName %> </h6>
-                <p class="text-muted text-smaller">Karta <%= nextNum - 1 %> z <%= sectionLength %></p>
-                <div class="progress mb-2">
-                  <% if(progressStatus && progressStatus === 0){ %> 
-                    <div class="progress-bar bg-danger" role="progressbar"></div>
-                  <% } else { %> 
-                    <div class="progress-bar bg-danger" role="progressbar" style="width:<%= progressStatus %>%" ><%= progressStatus %>%</div>
-                  <% } %> 
-                </div>
+                    <% } %>
               </div>
             </div>
           </div>
         </div>
+        <div class="col-lg-5 offset-lg-2 mb-3">
+          <div class="">
+            <div id="card" class="flashcard text-smaller">
+              <div class="card front text-center shadow">
+                <div class="card-body d-block">
+                  <div class="d-flex justify-content-center align-items-center min-height-300px">
+                    <div class="card-text pageA m-4" id="pageA"><b><%- card.pageA %></b></div>
+                  </div>
+                </div>
+                <div class="card-footer d-flex justify-content-center">
+                  <a href="#" class="btn btn-outline-danger" id='btn-flip-front'>Otočit</a>
+                </div>
+              </div>
+              <div class="card back shadow invisible" id="back">
+                <div class="card-body">
+                  <div class="d-flex align-items-center justify-content-center min-height-300px loader-push-class">
+                    <div id="loader"></div>
+                    <div class="card-text m-4 mb-0 max-height-280px text-gradient" id="pageB">
+                      <div class="inner-card-div">
+                        <%- card.pageB %>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-footer d-flex justify-content-between align-items-center">
+                  <a href="#" id="rotate-back"><i class="fas fa-sync-alt fa-lg"></i></a>
+                  <a href="/category/<%=card.category%>/section/<%=card.section%>/<%= nextNum %>"
+                    class="btn btn-danger easy-btn" id="next-btn">Další</a>
+                  <% if(currentUser && currentUser.isPremium){%>
+                    <% if(isCardSaved){%>
+                      <div id="save-star-div" name="<%= currentUser.email %>/<%=card._id%>" class="save-star clicked" style="cursor:pointer"><i class="fas fa-star fa-lg"></i></div>
+                    <% } else { %>
+                      <div id="save-star-div" name="<%= currentUser.email %>/<%=card._id%>" class="save-star" style="cursor:pointer"><i class="far fa-star fa-lg"></i></div>
+                    <% } %>
+                  <% } else if (currentUser && !currentUser.isPremium) { %>
+                  <div id="" class="save-star" style="cursor:pointer"><a href="#" data-bs-toggle="modal" data-bs-target="#savePremium"><i class="far fa-star fa-lg"></i></a></div>
+                  <% } else { %>
+                    <div style="width:14px"></div>
+                    <% } %>
+                </div>
+              </div>
+            </div>
+            <div class="text-center mt-4 servis-btns d-flex justify-content-center align-items-center">
+              <% if (currentUser && currentUser.admin) { %>
+                <a href="/cards/edit/<%= card._id%>" class="text-muted">Upravit kartu</a>
+                <a href="/cards/remove/<%= card._id%>" class="text-muted mx-3">Odstranit kartu</a>
+                <% } %>
+                  <a href="/cards/report/<%= card._id%>" target="_blank" class="text-muted">Nahlásit chybu</a>
+                  <p class="text-muted mb-0 px-3 nezobrazovat-na-mobilu">Otáčej [mezerníkem]</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2 mb-3 mt-5 mt-lg-0 nezobrazovat-na-mobilu">
+          <div class="card shadow">
+            <div class="card-body text-center mt-3">
+              <h6>
+                <%= sectionName %>
+              </h6>
+              <p class="text-muted text-smaller">Karta <%= nextNum - 1 %> z <%= sectionLength %>
+              </p>
+              <div class="progress mb-2">
+                <% if(progressStatus && progressStatus===0){ %>
+                  <div class="progress-bar bg-danger" role="progressbar"></div>
+                  <% } else { %>
+                    <div class="progress-bar bg-danger" role="progressbar" style="width:<%= progressStatus %>%">
+                      <%= progressStatus %>%
+                    </div>
+                    <% } %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-    <%- include('../partials/footer') %> 
-    <!-- JS for Bootstrap -->
-    <script src="/js/jquery.min.js" ></script>
-    <script src="https://kit.fontawesome.com/c9f8e59b45.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
-    <script src="/js/jquery.flip.min.js" ></script>
-    <script src="/js/flip.custom.js" ></script>
-    <script src="/js/custom.js"></script>
-    <script src="/js/card.js"></script>
-  </body>
+
+    <!-- MODAL - Delete user confirmation -->
+    <div class="modal fade" id="savePremium" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body" style="text-align: center;">
+            <h5 class="modal-title mb-3" style="text-align: center;"><i class="far fa-star fa-lg"></i> Vyzkoušej ukládání kartiček</h5>
+            <p class="p-3">Hvězdičkou si můžeš <b>ukládat</b> kartičky, které si potřebuješ více zopakovat. Poté si je můžeš <b>procházet</b> pod odkazem "Uložené kartičky" v horním menu.</p>
+            <p class="pb-3 px-3">Tohle a další stovky kartiček získáš <b>s předplatným Premium</b>.</p>
+            <a href="/premium" class="btn btn-danger">Zjistit více</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <%- include('../partials/footer') %>
+      <!-- JS for Bootstrap -->
+      <script src="/js/jquery.min.js"></script>
+      <script src="https://kit.fontawesome.com/c9f8e59b45.js" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+      <script src="/js/jquery.flip.min.js"></script>
+      <script src="/js/flip.custom.js"></script>
+      <script src="/js/custom.js"></script>
+      <script src="/js/card.js"></script>
+</body>
+
 </html>
