--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -44,7 +44,9 @@
                             </div>
                         </div> 
                         <p class="text-center my-3">Předplatné Premium placené měsíčně.</p>
-                        <p class="text-center my-3"><strong>+ 2 486</strong><br> prémiových kartiček</p>
+                        <p class="text-center mt-3 mb-1"><b>Co získáš navíc?</b></p>
+                        <p class="text-center my-1" style="font-size:0.8rem">více než 1 200<br> prémiových kartiček</p>
+                        <p class="text-center mt-1 mb-2" style="font-size:0.8rem">funkce ukládání<br> kartiček</p>
                         <div class="px-3 d-flex justify-content-center">
                             <% if (!currentUser) { %>
                                 <a href="/auth/user/new?premium=true" class="btn btn-danger my-3">Zaregistrovat se a aktivovat</a> 
@@ -62,7 +64,9 @@
                             </div> 
                         </div>
                         <p class="text-center my-3">Předplatné Premium se slevou za roční platbu.</p>
-                        <p class="text-center my-3"><strong>+ 2 486</strong><br> prémiových kartiček</p>
+                        <p class="text-center mt-3 mb-1"><b>Co získáš navíc?</b></p>
+                        <p class="text-center my-1" style="font-size:0.8rem">více než 1 200<br> prémiových kartiček</p>
+                        <p class="text-center mt-1 mb-2" style="font-size:0.8rem">funkce ukládání<br> kartiček</p>
                         <div class="px-3 d-flex justify-content-center">
                             <% if (!currentUser) { %>
                                 <a href="/auth/user/new?premium=true" class="btn btn-danger my-3">Zaregistrovat se a aktivovat</a> 
@@ -74,7 +78,7 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p class=" text-center w-custom-80 p-3 pb-5">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z vašeho účtu. <b>Zrušit jej můžeš kdykoliv.</b></p>
+                    <p class=" text-center w-custom-80 p-3 pb-5">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z tvého účtu. <b>Zrušit jej můžeš kdykoliv.</b></p>
                 </div>
             </div>
           </section>
