savedCards design bug fix

--- a/views/cards/savedCards.ejs
+++ b/views/cards/savedCards.ejs
@@ -88,10 +88,10 @@
                                                             data-bs-parent="#accordion-cards">
                                                             <div class="accordion-body px-sm-5">
                                                                 <div class="row">
-                                                                    <div class="col-11 col-sm-8">
+                                                                    <div class="col-12 col-sm-8">
                                                                         <%- card.pageB %>
                                                                     </div>
-                                                                    <div class="col-1 offset-sm-3 ">
+                                                                    <div class="col-12 offset-sm-3 col-sm-1 ">
                                                                         <a href="#" class="btn btn-sm btn-outline-secondary remove-from-saved-link" name="<%= card._id %>" title="<%= currentUser.email %>">Odebrat</a>
                                                                     </div>
                                                                 </div>                                          
