--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -39,7 +39,7 @@
                   <a class="nav-link" href="/cards/saved/">Uložené kartičky</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/auth/user/profile">Můj účet (<%= currentUser.firstname %>)</a>
+                  <a class="nav-link" href="/auth/user/profile">Můj účet</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/auth/user/logout">Odhlásit se</a>
