--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -24,7 +24,7 @@
   gtag('config', 'G-NNQ2L4K9C9');
 </script>
 
-<body class="d-flex flex-column vh-100 bg-light">
+<body class="d-flex flex-column vh-100">
   <%- include('../partials/navbar') %>
     <nav class="navbar bg-white shadow">
       <div class="container">
@@ -42,7 +42,7 @@
     <main class="container mt-md-5 p-4">
       <div class="row">
         <div class="col-lg-2 mb-3 zobrazovat-jen-na-mobilu">
-          <div class="card shadow">
+          <div class="card">
             <div class="card-body text-center">
               <p class="text-muted text-smaller mb-1">Karta <%= nextNum - 1 %> z <%= sectionLength %>
               </p>
@@ -60,18 +60,18 @@
         </div>
         <div class="col-lg-5 offset-lg-2 mb-3">
           <div class="">
-            <div id="card" class="flashcard text-smaller">
-              <div class="card front text-center shadow">
+            <div id="card" class="flashcard">
+              <div class="card front text-center">
                 <div class="card-body d-block">
                   <div class="d-flex justify-content-center align-items-center min-height-300px">
-                    <div class="card-text pageA m-4" id="pageA"><b><%- card.pageA %></b></div>
+                    <div class="card-text pageA m-4" id="pageA"><%- card.pageA %></div>
                   </div>
                 </div>
                 <div class="card-footer d-flex justify-content-center">
                   <a href="#" class="btn btn-outline-danger" id='btn-flip-front'>Otočit</a>
                 </div>
               </div>
-              <div class="card back shadow invisible" id="back">
+              <div class="card back invisible" id="back">
                 <div class="card-body">
                   <div class="d-flex align-items-center justify-content-center min-height-300px loader-push-class">
                     <div id="loader"></div>
@@ -111,11 +111,8 @@
           </div>
         </div>
         <div class="col-lg-2 mb-3 mt-5 mt-lg-0 nezobrazovat-na-mobilu">
-          <div class="card shadow">
-            <div class="card-body text-center mt-3">
-              <h6>
-                <%= sectionName %>
-              </h6>
+          <div class="card">
+            <div class="card-body text-center">
               <p class="text-muted text-smaller">Karta <%= nextNum - 1 %> z <%= sectionLength %>
               </p>
               <div class="progress mb-2">
