--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -75,7 +75,7 @@
                 <div class="card-body">
                   <div class="d-flex align-items-center justify-content-center min-height-300px loader-push-class">
                     <div id="loader"></div>
-                    <div class="card-text m-4 mb-0 max-height-280px text-gradient" id="pageB">
+                    <div class="card-text m-4 mb-0 max-height-280px" id="pageB">
                       <div class="inner-card-div" id="inner-card-div">
                         <%- card.pageB %>
                       </div>
