--- a/views/category.ejs
+++ b/views/category.ejs
@@ -4,7 +4,7 @@
 <% if (!currentUser){  %> 
     <div class="row">
         <div class="col-md-10 offset-md-1 mb-5">
-            <div class="card orange-shadow">
+            <div class="card">
                 <div class="row">
                     <div class="col-lg-8">
                         <h5 class="px-3 pt-3 pb-2 mb-0">Zaregistruj se a získej přístup ke stovkám kartiček zdarma</h5>
